# SentimenTocks

./: .replit  DEPLOYMENT.md  README.md  docker-compose.yml  netlify.toml  package-lock.json  package.json  pyproject.toml  replit.md  start_backend.py
backend/: Dockerfile  deploy.md  main.py  requirements.txt  start.py
client/: index.html
client/src/: App.tsx  index.css
client/src/components/: earnings-call.tsx  fundamental-analysis.tsx  price-chart.tsx  recent-analysis.tsx  sentiment-chart.tsx  stock-overview.tsx  stock-search.tsx
client/src/data/: earnings-data.ts
client/src/lib/: types.ts
client/src/pages/: dashboard.tsx
netlify/functions/: generate-transcript.js  openai.js  stocks.js
server/: index.ts  routes.ts  storage.ts
server/services/: nse-service.ts  openai-service.ts  yfinance-service.py
shared/: schema.ts
